has text, bars, just needs fix on bar visibility

--- a/src/css/leaflet-tweaks.less
+++ b/src/css/leaflet-tweaks.less
@@ -1,6 +1,9 @@
 // FILE FOR GENERAL LEAFLET STYLE CHANGES
 
 div.leaflet-popup-content{
+  p{
+    margin: 0 0 4px 0;
+  }
   margin: 10px 5px;
   width:auto;
   // max-width:240px;
