--- a/src/css/popup.less
+++ b/src/css/popup.less
@@ -9,33 +9,23 @@
     overflow: scroll;
     // max-height: 180px;
   }
-  .descript {
-    margin: 6px 0;
-  }
-  .note {
-    margin-top: 8px;
-    font-size: 95%;
-    text-decoration: italic;
-    color: #6d6d6d;
-    padding-left: 5px;
-  }
-  .address {
-    text-align: center;
-  }
-  .emphasis {
-    font-weight: bold;
-    font-size: 110%;
-  }
-  .popup-img {
+}
+
+.bar-container{
+  width: 100%;
+  .bar{
     width: 100%;
-    height: auto;
-    padding-top: 10px;
-  }
-  .credit {
-    font-size: 90%;
-    text-align: right;
-    text-transform: uppercase;
-    display: block;
-    color: gray;
+    height: 20px;
+    display: flex;
+    margin: 10px 0;
+    .bar--renter{
+      background-color: #008000;
+      height: 20px;
+    }
+    .bar--owner{
+      background-color: #38B0DE;
+      height: 20px;
+
+    }
   }
 }
