--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -42,11 +42,22 @@ body {
   text-align: center;
   font-size: 16px;
   text-transform: uppercase;
-  margin: 12px 0 0;
+  margin: 6px 0 0;
   @media @tablet {
     font-size: 14px;
   }
+
 }
+
+.mediumheader{
+  text-align: center;
+  font-size: 16px;
+  margin: 0 0 6px 0 ;
+  @media @tablet {
+    font-size: 13px;
+  }
+}
+
 
 .chatter {
   h1 {
